# textSC

./: CMakeLists.txt  README.md  main.cpp
battleSystem/: BattleSystem.cpp  BattleSystem.h
game/: Game.cpp  Game.h
units/: AttackType.h  DamageType.h  DefenseType.h  Firebat.cpp  Firebat.h  Marine.cpp  Marine.h  SizeType.h  Unit.cpp  Unit.h
units/Damage/: Damage.cpp  Damage.h
units/Defense/: Defense.cpp  Defense.h
units/firebat/: Firebat.cpp  Firebat.h
units/marine/: Marine.cpp  Marine.h
